recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: not found: value lenght
    avance(lenght)
           ^